--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,14 @@ a:hover {
 } */
 
 body {
-  margin: 0;
+  margin: 10px;
   padding: 0;
   background-color: #fcedcf;
   color: black;
+}
+
+.header {
+  align-items: center;
 }
 /* 
 h1 {
