updated navbar and Section styled components and index.css Homepage title has also been changed

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,21 @@ body {
   color: black;
 }
 
-.header {
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepageButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepageLink {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 /* 
