--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,16 @@ a:hover {
   color: #535bf2;
 } */
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 10px;
   padding: 0;
-  background-color: #fcedcf;
+  background-color: white;
   color: black;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1 {
@@ -83,3 +88,101 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+.header-component {
+  font-weight: 400;
+}
+
+.navbar-container {
+  position: fixed;
+  display: flex;
+  justify-content: space-evenly;
+
+  background-color: white;
+  box-sizing: border-box;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+
+  width: 100%;
+  height: 71px;
+  top: 0%;
+  left: 0%;
+  z-index: 1000;
+}
+
+.navbar-container ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar-container li {
+  list-style: none;
+  padding: 0 1.75rem;
+  font-size: 1.1rem;
+}
+
+.navbar-container li a {
+  text-decoration: none;
+  color: black;
+}
+
+.navbar-container li a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.navbar-container li a:hover {
+  text-decoration: none;
+  color: grey;
+}
+
+.particle-logo {
+  display: flex;
+  flex-direction: column;
+  padding: 0.3rem 2rem;
+}
+
+.particle-logo .particle {
+  cursor: pointer;
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: black;
+  text-decoration: none;
+}
+
+.particle a {
+  cursor: pointer;
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: black;
+  text-decoration: none;
+}
+
+.particle-logo .particle a:visited {
+  cursor: pointer;
+  font-size: 1.3rem;
+  color: black;
+  text-decoration: none;
+}
+
+#homepage {
+  padding-top: 10rem;
+}
+
+/* articles */
+
+.article-titles {
+  font-weight: 400;
+}
+.article-img {
+  border-radius: 5px;
+  height: 15rem;
+  width: 25rem;
+}
+@media screen and (max-width: 1000px) {
+  .articles-page {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+  }
+}
